<resources>
    <string name="app_name">Instagram_login_page_UI</string>

    <!-- string for showing the text "Forgot your login details-->
    <string name="forgot"><font color='c4c4c4'>Forgot your login details? </font><b>Get help logging in.</b></string>

    <!-- string to show the text " Dont have an account-->
    <string name="sign_up"><font color='c4c4c4'>Dont have an account? </font><b>Sign up.</b></string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="phone_number_email_or_username">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="log_inn">Log In</string>
    <string name="logout">Logout</string>
</resources>
