<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="147dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="86dp"
        tools:srcCompat="@drawable/screenshot_20221112_001656" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-50dp"
                android:layout_marginTop="16dp"
                android:onClick="viewhide2"
                android:padding="11dp"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Confirm password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/show_pass_btn2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-50dp"
                android:layout_marginTop="16dp"
                android:onClick="viewhide2"
                android:padding="11dp"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:onClick="registerd"
            android:padding="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="18sp"
            android:orientation="horizontal">

            <View
                android:layout_width="150dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

            <!-- textview displaying the message "OR"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="#9a9a9a"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- to occupy the rectangular area in right
            side so that message can be displayed in center-->
            <View
                android:layout_width="150dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:onClick="login"
            android:text="@string/log_inn"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>