<?xml version="1.0" encoding="utf-8"?>
<!-- Relative layout as parent layout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Linear layout to contain all the
        editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <!-- Imageview displaying the logo
                or name of the application-->
        <ImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:adjustViewBounds="true"
            android:src="@drawable/screenshot_20221112_001656" />

        <!-- Edit text provided to user to
            enter email, username or phone no.-->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"

            android:background="@drawable/background_edit_text"
            android:hint="@string/phone_number_email_or_username"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <!-- Edit text provided to write
            password (according to instagram UI)-->

        <!-- material button is used to display the "Login" button to user-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/password"
                android:padding="12dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="viewhide"
                android:padding="11dp"
                android:src="@drawable/ic_baseline_remove_red_eye_24" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:padding="12dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />

        <!-- Linear layout to display the message
            OR using view so that it can be shown separately-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <!-- to occupy the rectangular area in left side
                so that message can be displayed in center-->
            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

            <!-- textview displaying the message "OR"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="#9a9a9a"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- to occupy the rectangular area in right
                side so that message can be displayed in center-->
            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

        </LinearLayout>

        <!-- text view to show the message
        "Dont have an account?Sign up-->
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center_horizontal"
            android:onClick="sign_up"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="16sp" />
        />
    </LinearLayout>

</RelativeLayout>
